<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false">

    <android.support.v7.widget.CardView
        android:id="@+id/room_2043"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:animateLayoutChanges="true"
        android:backgroundTint="@color/orange"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:translationZ="10dp"

        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/coridor"
        app:layout_constraintEnd_toStartOf="@+id/room_2042"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/room_2044"
        app:layout_constraintTop_toTopOf="@+id/room_2044"
        tools:targetApi="lollipop">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/include"
                layout="@layout/board_of_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:text="@string/_2043"
                android:textAlignment="center"
                android:textSize="40dp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintBottom_toTopOf="@+id/include"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:textAllCaps="false"
                tools:ignore="SpUsage" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/room_2042"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:animateLayoutChanges="true"
        android:backgroundTint="@color/pink"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:translationZ="10dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/room_2041"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/room_2043"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:targetApi="lollipop">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/include"
                layout="@layout/board_of_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:text="@string/_2042"
                android:textAlignment="center"
                android:textSize="40dp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintBottom_toTopOf="@+id/include"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:textAllCaps="false"
                tools:ignore="SpUsage" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/room_2044"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:animateLayoutChanges="true"
        android:backgroundTint="@color/brown"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:translationZ="10dp"

        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/room_2045"
        app:layout_constraintEnd_toStartOf="@+id/room_2043"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:targetApi="lollipop">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/include"
                layout="@layout/board_of_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:text="@string/_2044"
                android:textAlignment="center"
                android:textSize="40dp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintBottom_toTopOf="@+id/include"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:textAllCaps="false"
                tools:ignore="SpUsage" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/coridor"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:alpha="0.6"
        android:animateLayoutChanges="true"
        android:backgroundTint="@android:color/black"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:translationZ="10dp"
        app:cardCornerRadius="4dp"

        app:layout_constraintEnd_toStartOf="@+id/room_2041"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/room_2045"
        app:layout_constraintTop_toBottomOf="@+id/room_2043"
        tools:targetApi="lollipop">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_vertical"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:text="@string/doors"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30dp"
            android:textStyle="bold"
            android:typeface="monospace"
            tools:ignore="SpUsage" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/room_2041"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:animateLayoutChanges="true"
        android:backgroundTint="@color/red"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:translationZ="10dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/coridor"
        app:layout_constraintTop_toBottomOf="@+id/room_2042"
        app:layout_constraintVertical_chainStyle="packed"
        tools:targetApi="lollipop">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/include"
                layout="@layout/board_of_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:text="@string/_2041"
                android:textAlignment="center"
                android:textSize="40dp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintBottom_toTopOf="@+id/include"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:textAllCaps="false"
                tools:ignore="SpUsage" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/room_2045"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:animateLayoutChanges="true"
        android:backgroundTint="@color/yellow"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:translationZ="10dp"

        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/coridor"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_2044"
        tools:targetApi="lollipop">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/include"
                layout="@layout/board_of_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:text="@string/_2045"
                android:textAlignment="center"
                android:textSize="40dp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintBottom_toTopOf="@+id/include"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:textAllCaps="false"
                tools:ignore="SpUsage" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>