<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false">

    <android.support.v7.widget.CardView
        android:id="@+id/room_3043"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:animateLayoutChanges="true"
        android:backgroundTint="@color/cyan"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:translationZ="10dp"

        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/corridor"
        app:layout_constraintEnd_toStartOf="@+id/room_3042"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/room_3044"
        app:layout_constraintTop_toTopOf="@+id/room_3044"
        tools:targetApi="lollipop">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/include"
                layout="@layout/board_of_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:text="@string/_3043"
                android:textAlignment="center"
                android:textSize="40dp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintBottom_toTopOf="@+id/include"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:textAllCaps="false"
                tools:ignore="SpUsage" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/room_3042"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:animateLayoutChanges="true"
        android:backgroundTint="@color/green"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:translationZ="10dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/room_3041"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/room_3043"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:targetApi="lollipop">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/include"
                layout="@layout/board_of_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:text="@string/_3042"
                android:textAlignment="center"
                android:textSize="40dp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintBottom_toTopOf="@+id/include"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:textAllCaps="false"
                tools:ignore="SpUsage" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/room_3044"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:animateLayoutChanges="true"
        android:backgroundTint="@color/blue"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:translationZ="10dp"

        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/room_3045"
        app:layout_constraintEnd_toStartOf="@+id/room_3043"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:targetApi="lollipop">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/include"
                layout="@layout/board_of_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:text="@string/_3044"
                android:textAlignment="center"
                android:textSize="40dp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintBottom_toTopOf="@+id/include"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:textAllCaps="false"
                tools:ignore="SpUsage" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/corridor"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:alpha="0.6"
        android:animateLayoutChanges="true"
        android:backgroundTint="@android:color/black"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:translationZ="10dp"
        app:cardCornerRadius="4dp"

        app:layout_constraintEnd_toStartOf="@+id/room_3041"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/room_3045"
        app:layout_constraintTop_toBottomOf="@+id/room_3043"
        tools:targetApi="lollipop">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_vertical"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:text="@string/strike_doors_strike"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30dp"
            android:textStyle="bold"
            android:typeface="monospace"
            tools:ignore="SpUsage" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/room_3041"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:animateLayoutChanges="true"
        android:backgroundTint="@color/khaki"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:translationZ="10dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/corridor"
        app:layout_constraintTop_toBottomOf="@+id/room_3042"
        app:layout_constraintVertical_chainStyle="packed"
        tools:targetApi="lollipop">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/include"
                layout="@layout/board_of_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:text="@string/_3041"
                android:textAlignment="center"
                android:textSize="40dp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintBottom_toTopOf="@+id/include"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:textAllCaps="false"
                tools:ignore="SpUsage" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/room_3045"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:animateLayoutChanges="true"
        android:backgroundTint="@color/violet"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:translationZ="10dp"

        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/corridor"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_3044"
        tools:targetApi="lollipop">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/include"
                layout="@layout/board_of_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:text="@string/_3045"
                android:textAlignment="center"
                android:textSize="40dp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintBottom_toTopOf="@+id/include"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:textAllCaps="false"
                tools:ignore="SpUsage" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>